--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    
+    max-height: 100%;
 }
 
 .homepage_nav {
@@ -16,21 +16,31 @@
 
 .homepage_nav > .MuiSvgIcon-root{
     margin-left: 15px;
-    height: 30px;
-    width: 30px;
-   
+    height: 25px;
+    width: 25px;
+    color: #585858;
 }
 
+
+
 .homepage_nav > .MuiSvgIcon-root:hover{
-    background-color: #5f6368 ;
+    background-color: rgba(207, 207, 207, 0.993) ;
+    background-size: 50px;
     border-radius: 50%;
+
+}
+
+.homepage_Footer{
+    margin-top: auto;
+    background-color: #f1f1f1;
 }
 
 .footer_nav{
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 10px 20px;
+    padding: 8px 20px;
+    margin-bottom: 5px;
 }
 
 .nav_left{
@@ -48,7 +58,7 @@
 .footer_nav a{
     font-family: Arial, Helvetica, sans-serif;
     padding-left: 15px;
-    font-size: 15px;
+    font-size: 13px;
     color: #70757a;
     text-decoration: inherit;
 }
@@ -66,6 +76,6 @@
 
 .logo img{
     object-fit: contain;
-    height: 90px;
+    height: 85px;
 }
 
