add style to footer nav

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -37,6 +37,7 @@
 
 .footer_nav{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-end;
     padding: 8px 20px;
