--- a/src/Components/Searchbar.css
+++ b/src/Components/Searchbar.css
@@ -17,7 +17,9 @@
 }
 
 .search_box:hover{
-    box-shadow: 2px 2px #c0c0c0;
+    background-color: #fff;
+    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+    border-color: rgba(223,225,229,0);
 }
 
 .search_box input{
