--- a/src/Components/Searchbar.css
+++ b/src/Components/Searchbar.css
@@ -59,3 +59,7 @@
     background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
     color: #222;
 }
+
+.hidden{
+    display: none !important;
+}
