--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -16,8 +16,8 @@
 
 .homepage_nav > .MuiSvgIcon-root{
     margin-left: 15px;
-    height: 25px;
-    width: 25px;
+    /* height: 25px;
+    width: 25px; */
     color: #585858;
 }
 
@@ -26,7 +26,7 @@
 .homepage_nav > .MuiSvgIcon-root:hover{
     background-color: rgba(207, 207, 207, 0.993) ;
     background-size: 50px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 
 }
 
